- Tweaked MySQL setup for better performance, ran tests again
  for updated stats in LGI.pdf.
- Added some extra indices to job_queue to avoid MySQL sorting 
  a bit more. The number of slow_queries dropped significantly.
- Removed duplicate indices.
- Use explicitly specified index for work requests and job
  lists so no 'ORDER BY' is needed to sort. Updated stats and
  documentation. Big improvements gained.
- Removed some php error messages for repositories.
- Added a check_running script for the LGI scheduler.


Thu August 19 2010 -- version 1.28
----------------------------------

- Removed some old documentation and added new.
- Allow for project server scheduler unlimited run time.
- Limited the number of work request a resource can do.
- Made index UNIQUE in running_locks.
- Made sure interfaces job list requests do sort the jobs on 
  state_time_stamp by using the available index, even when the
  table is small and the MySQL optimizer likes to ignore the
  indexs we made.
- Made sure that for the basic_interface the SID (to counter
  XSS attacks) is not reset each time index.php is hit.


Fri November 19 2010 -- version 1.29
------------------------------------

- Patched Ssl.inc to work with newer PHP 5.x (patch of Willem v.
  Engen).
- Added 'cd' trick to some tool scripts so they can be run from 
  any other directory.
- Added extra logging to stderr option for qstat tool.
- Made sure that for CLI tools arguments are numeric if needed.
- Added job count feature to request work for resources for future
  pilot job frameworks.
- Removed small update bug for master-slave servers.
- Added slave server capabilities report into daemon.


Mon December 20 2010 -- version 1.30
------------------------------------

- Patched repository content listing code. It had a security hole 
  found by Willem v. Engen.
- Removed some dead code in interface job state api.
- Added support for retreiving job count in interface API.